# panelmark

./: CHANGELOG.md  CLAUDE.md  DOCUMENTATION_TODO.md  DRAW_MIGRATION.md  ECOSYSTEM.md  README.md  RENDER_ABSTRACTION.md  TODO.md  example.shell  pyproject.toml
docs/: custom-interactions.md  draw-commands.md  shell-language.md
docs/renderer-spec/: contract.md  extensions.md  overview.md  portable-library.md  readiness.md
marketing/: COMPARISON.md
panelmark/: DOCS_TODO.md  __init__.py  draw.py  exceptions.py  layout.py  observer.py  parser.py  shell.py  style.py
panelmark/interactions/: __init__.py  base.py
tests/: test_layout.py  test_observer.py  test_parser.py  test_shell.py  test_style.py
