[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "panelmark"
version = "0.1.0"
description = "A markup language for UI layouts — define panels once, render anywhere."
requires-python = ">=3.10"
dependencies = []
keywords = ["ui", "layout", "dsl", "markup", "tui", "terminal", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["panelmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
