[build-system]
requires = ["setuptools>=42,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "panelmark"
version = "0.1.0"
description = "A markup language for UI layouts — define panels once, render anywhere."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Timothy Morris PhD", email = "sirrommit@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
keywords = ["ui", "layout", "dsl", "markup", "tui", "terminal", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/sirrommit/panelmark"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["panelmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
